# r1-agent

./: .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.pool  GOVERNANCE.md  Makefile  PACKAGE-AUDIT.md  PORTFOLIO-EXECUTION-INDEX.md  README.md  SECURITY.md  STATUS.md  STEWARDSHIP.md  STOKE-IMPL-NOTES.md  cloudbuild-binaries.yaml  cloudbuild-release.yaml  cloudbuild.yaml  go.mod  go.sum  install.sh  integration_test.go  package.json  stoke-plan.example.json  stoke.policy.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  harness_regression.md
.github/workflows/: bench-nightly.yml  ci.yml  ci.yml.disabled  cla.yml  desktop-augmentation.yml  release.yml  release.yml.disabled
.stoke/gates.d/: default.yaml  fast.yaml  strict.yaml
audit/: chdir-lint-passes.md  spec-review-2026-04-21-cycle2.md  spec-review-2026-04-21.md  spec-review-agentic-test-harness.md  spec-review-cortex-concerns.md  spec-review-cortex-core.md  spec-review-desktop-cortex-augmentation.md  spec-review-lanes-protocol.md  spec-review-r1d-server.md  spec-review-tui-lanes.md  spec-review-web-chat-ui.md  stoke-repo-res.txt
audit/antitrunc/: BLOCKED-item-21-claude-md-package-map.md  operator-integration-test-summary.md
bench/: bench_test.go  r1d_serve_bench_test.go
bench/baselines/: token-baselines-2026-Q2.json
bench/cost/: budget.go  tracker.go
bench/evolver/: collect.go  generate.go
bench/harnesses/: aider.go  claude_code.go  codex.go  iface.go  stoke.go
bench/isolation/: docker.go  timeout.go
bench/judge/: deterministic.go  honesty.go  iface.go  llm_judge.go  poll.go
bench/metrics/: cost.go  diff.go  honesty.go  reproducibility.go  variance.go
bench/prompt_cache/: run.go
bench/reports/: csv.go  html.go  markdown.go
cmd/chat-probe/: main.go
cmd/critique-compare/: main.go
cmd/heroa-e2e/: main.go
cmd/r1-a2a/: main.go
cmd/r1-acp/: main.go
cmd/r1-gateway/: main.go
cmd/r1-mcp/: backends.go  backends_test.go  flagship_runtime.go  main.go  main_test.go  skill_execution_audit_runtime.go  skill_packs.go
cmd/r1-server/: datadir.go  db.go  db_encrypted_test.go  import.go  import_test.go  index.go  index_test.go  main.go  (+22 more)
desktop/: CHANGELOG.md  Cargo.toml  IPC-CONTRACT.md  PLAN.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/docs/: architecture.md
desktop/scripts/: copy-r1-binaries.sh
desktop/src/: ipc-stub.ts  main.ts  popout.tsx  r1d-1.test.ts  r1d-2.test.ts  r1d-3.test.ts  styles.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/binaries/: .gitignore
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: .gitkeep
desktop/src-tauri/src/: .gitkeep  discovery.rs  errors.rs  ipc.rs  lanes.rs  lib.rs  main.rs  menu.rs  popout.rs  subprocess.rs  transport.rs
desktop/src-tauri/tests/: discovery_test.rs  lanes_test.rs
desktop/src/components/: discovery-wizard.tsx
desktop/src/lib/: autostart.ts  laneSubscription.ts
desktop/src/onboarding/: onboarding.ts
desktop/src/panels/: approval-queue.ts  cost-panel.ts  daemon-status.ts  descent-evidence.ts  descent-ladder.ts  lane-rail.ts  ledger-node-drawer.ts  ledger-viewer.ts  mcp-servers.ts  memory-inspector.ts  observability.ts  scheduler.ts  session-ipc-test.ts  session-view.ts  settings.ts  skill-catalog.ts  sow-tree.ts
desktop/src/state/: sessionStore.ts
desktop/src/types/: ipc-const.ts  ipc.d.ts
desktop/tests/e2e/: daemon-discovery.spec.ts  lanes-streaming.spec.ts  multi-session.spec.ts  popout-lane.spec.ts
desktop/tests/e2e/helpers/: desktop-fixtures.ts  tauri-driver-session.ts
docs/: AGENTIC-API-CATALOG.md  AGENTIC-API.md  ARCHITECTURE.md  BEACON-PRIMITIVES.md  BEACON-PROTOCOL.md  BUSINESS-VALUE.md  DEPLOYMENT.md  FEATURE-MAP.md  HOW-IT-WORKS.md  MIGRATION-MARKDOWN-TO-DETERMINISTIC.md  README.md  ROADMAP.md  SKILL-WIZARD.md  SKILLS-DETERMINISTIC.md  TRUST-LAYER.md  anti-deception-matrix.md  bench-corpus-format.md  bench-swebench.md  benchmark-stance.md  browser-executor.md  deploy-executor.md  forge-feedback-loop.md  forge-research-synthesis.md  forge-tui.md  forge-vs-claude-code.md  gates-yaml.md  harness-architecture.md  mcp-security.md  mint.json  operator-guide.md  provider-pool.md  s6-deprecation-closures.md  stoke-agent-serve.md  stoke-protocol.md  trustplane-integration.md  upgrades-sow-verification.md  wave-a-wal.md  wave-b-receipts-honesty.md  wave-b-wal.md  wave-c-wal.md  (+2 more)
evaluation/: r1-vs-reference-runtimes-matrix.md
ide/: PROTOCOL.md
plans/: HANDOFF-deploy-state.md  HANDOFF.md  LAUNCH-E1-E4.sh  MILESTONE-sow-R01-convergence.md  NEXT-EXPERIMENTS.md  SCOPE-AUDIT-2026-05-04.md  WORK-stoke.md  build-plan.md  w36-doc-refresh-2026-04-29.md  w36-doc-refresh-2026-04-30.md
scripts/: install-hooks.sh  lint-lane-events.sh  pre-push.sh
services/: .gitignore  cloudbuild-deploy.yaml  deploy.sh
specs/: agent-serve-async.md  agentic-test-harness.md  anti-truncation.md  browser-interactive.md  browser-research-executors.md  chat-descent-control.md  ci-infra-cleanup.md  cloudswarm-protocol.md  cortex-concerns.md  cortex-core.md  delegation-a2a.md  deploy-executor.md  deploy-phase2.md  descent-hardening.md  desktop-cortex-augmentation.md  encryption-at-rest.md  event-log-proper.md  executor-foundation.md  fanout-generalization.md  finishing-touches.md  lanes-protocol.md  ledger-redaction.md  mcp-client.md  memory-bus.md  memory-full-stack.md  operator-ux-commands.md  operator-ux-memory.md  oss-hub.md  policy-engine.md  provider-pool.md  r1-rename-s1-3-nats.md  r1-rename-s2-5-npm.md  r1-server-ui-v2.md  r1-server.md  r1d-server.md  reconciliation-report.md  research-orchestrator.md  retention-policies.md  stoke-api.yaml  tui-lanes.md  (+5 more)
tools/: lint-no-chdir.sh
web/: .gitignore  QA-PASS-2026-05-04.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+2762 files in other folders)
