# R1 Desktop Tauri sidecar (Rust host tier).
# R1D-1.1: main.rs added; subprocess launcher wired.
# See desktop/docs/architecture.md §1 (Tier 2: Rust host).

[package]
name = "r1-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "R1 Desktop - Tauri sidecar (R1D-1 implemented)."

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
which = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
